--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "rich>=13.7.0",
     "pydantic>=2.5.0",
     "python-magic>=0.4.27",
+    "GitPython>=3.1.0",
+    "unidiff>=0.7.0",
+    "debugpy>=1.8.0",
 ]
 
 [project.optional-dependencies]
