--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,40 @@
+[build-system]
+requires = ["uv_build>=0.8.3,<0.9.0"]
+build-backend = "uv_build"
+
 [project]
 name = "diffmage"
 version = "0.1.0"
 description = "AI-powered git commit message generator with semantic analysis"
 readme = "README.md"
 authors = [
-    { name = "Nick Galluzzo", email = "n.galluzzo@gmail.com" }
+  {name = "Nick Galluzzo", email = "n.galluzzo@gmail.com"}
 ]
 requires-python = ">=3.11"
 dependencies = [
-    "typer>=0.9.0",
-    "rich>=13.7.0",
-    "pydantic>=2.5.0",
-    "python-magic>=0.4.27",
-    "GitPython>=3.1.0",
-    "unidiff>=0.7.0",
-    "debugpy>=1.8.0",
+  "typer>=0.9.0",
+  "rich>=13.7.0",
+  "pydantic>=2.5.0",
+  "python-magic>=0.4.27",
+  "GitPython>=3.1.0",
+  "unidiff>=0.7.0",
+  "debugpy>=1.8.0"
 ]
 
 [project.optional-dependencies]
 ai = [
-    "openai>=1.3.0",
-    "anthropic>=0.7.0",
-    "tiktoken>=0.5.0",
+  "openai>=1.3.0",
+  "anthropic>=0.7.0",
+  "tiktoken>=0.5.0"
 ]
 dev = [
-    "pytest>=7.4.0",
-    "pytest-cov>=4.1.0",
-    "pytest-mock>=3.11.0",
-    "pytest-asyncio>=0.21.0",
-    "black>=23.0.0",
-    "ruff>=0.1.0",
-    "mypy>=1.5.0",
+  "pytest>=7.4.0",
+  "pytest-cov>=4.1.0",
+  "pytest-mock>=3.11.0",
+  "pytest-asyncio>=0.21.0",
+  "black>=23.0.0",
+  "ruff>=0.1.0",
+  "mypy>=1.5.0"
 ]
 
 [project.scripts]
@@ -38,15 +42,11 @@ diffmage = "diffmage.cli.main:app"
 
 [tool.uv]
 dev-dependencies = [
-    "pytest>=7.4.0",
-    "pytest-cov>=4.1.0",
-    "pytest-mock>=3.11.0",
-    "pytest-asyncio>=0.21.0",
-    "black>=23.0.0",
-    "ruff>=0.1.0",
-    "mypy>=1.5.0",
+  "pytest>=7.4.0",
+  "pytest-cov>=4.1.0",
+  "pytest-mock>=3.11.0",
+  "pytest-asyncio>=0.21.0",
+  "black>=23.0.0",
+  "ruff>=0.1.0",
+  "mypy>=1.5.0"
 ]
-
-[build-system]
-requires = ["uv_build>=0.8.3,<0.9.0"]
-build-backend = "uv_build"
