--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: astral-sh/setup-uv@v2
       - run: uv sync --dev
       - run: uv run ruff check src/ tests/
-      - run: uv run black --check src/ tests/
+      - run: uv run ruff format --check src/ tests/
 
   type-check:
     runs-on: ubuntu-latest
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, 3.11, 3.12]
+        python-version: [3.11]
     steps:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v2
