--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,24 +17,7 @@ dependencies = [
   "pydantic>=2.5.0",
   "python-magic>=0.4.27",
   "GitPython>=3.1.0",
-  "unidiff>=0.7.0",
-  "debugpy>=1.8.0"
-]
-
-[project.optional-dependencies]
-ai = [
-  "openai>=1.3.0",
-  "anthropic>=0.7.0",
-  "tiktoken>=0.5.0"
-]
-dev = [
-  "pytest>=7.4.0",
-  "pytest-cov>=4.1.0",
-  "pytest-mock>=3.11.0",
-  "pytest-asyncio>=0.21.0",
-  "black>=23.0.0",
-  "ruff>=0.1.0",
-  "mypy>=1.5.0"
+  "unidiff>=0.7.0"
 ]
 
 [project.scripts]
@@ -46,7 +29,13 @@ dev-dependencies = [
   "pytest-cov>=4.1.0",
   "pytest-mock>=3.11.0",
   "pytest-asyncio>=0.21.0",
-  "black>=23.0.0",
   "ruff>=0.1.0",
-  "mypy>=1.5.0"
+  "mypy>=1.5.0",
+  "types-unidiff",
+  "debugpy>=1.8.0",
+  "pre-commit>=4.2.0",
 ]
+
+[[tool.mypy.overrides]]
+module = ["debugpy.*"]
+ignore_missing_imports = true
