--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v2
       - run: uv sync --dev
-      - run: uv run mypy src/
+      - run: uv run mypy
 
   test:
     runs-on: ubuntu-latest
