--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,22 @@ dev-dependencies = [
   "pre-commit>=4.2.0",
 ]
 
+[tool.mypy]
+strict = true
+python_version = "3.11"
+files = ["src/", "tests/"]
+show_error_codes = true
+show_column_numbers = true
+show_error_context = true
+incremental = true
+cache_dir = ".mypy_cache"
+
+
 [[tool.mypy.overrides]]
 module = ["debugpy.*"]
 ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
