--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
   "pydantic>=2.5.0",
   "python-magic>=0.4.27",
   "GitPython>=3.1.0",
-  "unidiff>=0.7.0"
+  "unidiff>=0.7.0",
+  "litellm>=1.74.9.post1",
 ]
 
 [project.scripts]
