feat(evaluation): add LLM-based commit message quality evaluation with Chain-of-Thought reasoning
- Introduce LLMEvaluator class for assessing commit message quality
- Add evaluation prompts with few-shot examples and structured JSON responses
- Implement EvaluationResult model with WHAT/WHY scoring (1-5 scale)
- Update CLI to display evaluation results alongside generated commit messages
- Refactor AI client to support both generation and evaluation workflows
- Add comprehensive tests for evaluation system components
- Update default model to qwen_3_coder (non-free version)
- Improve debugging workflow with interactive debug runner script
- Remove deprecated debugpy attachment configuration from CLI

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,29 +1,16 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python: Debug Diffmage CLI",
+      "name": "Debug Diffmage CLI",
       "type": "debugpy",
       "request": "launch",
-      "program": "${workspaceFolder}/src/diffmage/cli/main.py",
+      "program": "${workspaceFolder}/debug_runner.py",
       "console": "integratedTerminal",
       "justMyCode": false,
       "env": {
         "PYTHONPATH": "${workspaceFolder}/src"
-      },
-    },
-    {
-      "name": "Python: Attach to Diffmage",
-      "type": "debugpy",
-      "request": "attach",
-      "connect": {
-        "host": "localhost",
-        "port": 5678
-      },
-      "justMyCode": false
+      }
     }
   ]
 }
